# codevisor

./: .gitignore  .gitmodules  .prettierignore  README.md  lefthook.yml  oxlint.json  package.json  prettier.config.mjs  refs.json  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.claude/: apple-design-context.md
.claude/skills/: run-dev
.codex/: config.toml
.github/: actionlint.yaml
.github/workflows/: backfill-release-notes.yml  build-release-artifacts.yml  deploy-www.yml  ghostty-cache.yml  provision-macos-runners.yml  publish-browser-extension.yml  publish-release-candidate.yml  release-candidate.yml  release.yml
HerdMan/: ContentView.swift
HerdMan.xcodeproj/: project.pbxproj
HerdMan/DesignSystem/: ShimmeringText.swift
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  server.rs
apps/macos/: ERROR_HANDLING_AUDIT.md  Info.plist  package.json
apps/server/: package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/www/: package.json  source.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc
docs/: chat-notifications.md  macos-tauri-parity.md  releasing.md
scripts/: build-ghostty.sh  dev.mjs  sync-web-icon.sh  verify-tauri-chat-ui.sh
scripts/git-hooks/: post-checkout-refs-pull.sh  post-checkout-worktree-ready.sh
scripts/release/: backfill-release-notes.mjs  build-browser-extension.mjs  build-desktop-app.sh  (+20 more)
(+474 files in other folders)
